# C0-microSD-utilities

./: .flake8  .gitignore  C0-microSD-toolkit.sh  C0_microSD_plus_toolkit.py  C0_microSD_toolkit.py  README.md  SD_Dev_power_measure.py  SD_Dev_toolkit.py  pyproject.toml
src/: README.md
src/c/include/: C0microSDConstants.h  C0microSDHostUtils.h  C0microSDPlusConstants.h  C0microSDPlusHostUtils.h
src/c/lib/: C0microSDHostUtils.c  C0microSDPlusHostUtils.c
src/circuitpython/c0microsd/: constants.py  interface.py  sd_interface.py  sd_protocol.py
src/python/c0microsd/: constants.py  interface.py
src/python/c0microsdplus/: interface.py
src/python/sddev/: sddev.py
src/python/signaloid_api/: README.md  core_downloader.py
